tests/rosetta/out/Swift/boolean-values.error
run error: exit status 1
/tmp/TestMochiToSwiftboolean-values1184459492/001/main.swift:3:13: error: cannot find 'lower' in scope
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:38Z
 2 | func parseBool(_ s: String) -> Bool {
 3 |     let l = lower(s)
   |             `- error: cannot find 'lower' in scope
 4 |     if l == "1" || l == "t" || l == true || l == "yes" || l == "y" {
 5 |         return true

/tmp/TestMochiToSwiftboolean-values1184459492/001/main.swift:22:9: warning: initialization of immutable value 'bolStr' was never used; consider replacing with assignment to '_' or removing it
20 |     let str1 = "japan"
21 |     print("Before :", "string")
22 |     let bolStr = parseBool(str1)
   |         `- warning: initialization of immutable value 'bolStr' was never used; consider replacing with assignment to '_' or removing it
23 |     print("After :", "bool")
24 | }
