tests/rosetta/out/Swift/boolean-values.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:38Z
func parseBool(_ s: String) -> Bool {
    let l = lower(s)
    if l == "1" || l == "t" || l == true || l == "yes" || l == "y" {
        return true
    }
    return false
}
func main() {
    var n = true
    print(n)
    print("bool")
    n = !n
    print(n)
    let x = 5
    let y = 8
    print("x == y:", x == y)
    print("x < y:", x < y)
    print("\nConvert String into Boolean Data type\n")
    let str1 = "japan"
    print("Before :", "string")
    let bolStr = parseBool(str1)
    print("After :", "bool")
}
main()
